# scratch

CEK/: cek.cabal
CEK/src/: Main.hs
aoc2024/: aoc2024.cabal
aoc2024/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day09.hs
