cabal-version:   3.0
name:            aoc2024
version:         0.1.0.0
license:         NONE
author:          Albe
maintainer:      alberto.piai@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
