cabal-version:   3.0
name:            aoc2024
version:         0.1.0.0
license:         NONE
author:          Albe
maintainer:      alberto.piai@gmail.com
build-type:      Simple

common shared
    ghc-options: -Wall
    hs-source-dirs:   src
    default-language: Haskell2010

executable day01
    import:           shared
    main-is:          Day01.hs
    build-depends:    base
                    , raw-strings-qq
                    , unordered-containers

executable day02
    import:           shared
    main-is:          Day02.hs
    build-depends:    base
                    , raw-strings-qq
                    , unordered-containers

executable day03
    import:           shared
    main-is:          Day03.hs
    build-depends:    base
                    , raw-strings-qq
                    , unordered-containers

executable day04
    import:           shared
    main-is:          Day04.hs
    build-depends:    base
                    , raw-strings-qq
                    , unordered-containers
                    , array
